--- a/index.html
+++ b/index.html
@@ -169,9 +169,12 @@
         <h3>Tools</h3>
         <div class="skill-list">
           <span>Nmap</span>
-          <span>Autopsy</span>
-          <span>SPF (Smartphone Forensic)</span>
+          <span>Cellebrite UFED</span>
+          <span>Cellebrite Physical Analyzer</span>
+          <span>IDA Professional</span>
+          <span>Oxygen Detective Forensic</span>
           <span>Magnet AXIOM</span>
+          <span>Autopsy</span>
           <span>FTK Imager</span>
           <span>ZAP</span>
           <span>Wireshark</span>
