--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
 
         <p>My Technical skills include <strong>Python, Bash, Shell Scripting, VAPT, WAPT, Nmap, Burp Suite, Autopsy and OSINT research</strong>. I am Passionate about continuous learning, applying cybersecurity knowledge to real-world problems, and contributing to a safer digital ecosystem.</p>
 
-        <p>Top 8% in TryHackMe... <img src="assets/Sayani thm badge id.png" alt="Sayani THM Badge" width="80" style="vertical-align:middle; border-radius:6px;"></p>
+        <p>Top 6% in TryHackMe... <img src="assets/Sayani thm badge id.png" alt="Sayani THM Badge" width="80" style="vertical-align:middle; border-radius:6px;"></p>
+
+        <p>Pursuing <strong>CEH Master (EC-Council)</strong> with specialization in advanced ethical hacking and penetration testing.</p>
 
 
 
