--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           <span>Cellebrite Physical Analyzer</span>
           <span>IDA Professional</span>
           <span>Oxygen Detective Forensic</span>
-          <span>Magnet AXIOM</span>
+          <span>Magnet AXIOM -- Process & Examine</span>
           <span>Autopsy</span>
           <span>FTK Imager</span>
           <span>ZAP</span>
