--- a/index.html
+++ b/index.html
@@ -199,6 +199,11 @@
         <div class="skill-list">
           <span>AI Prompting</span>
           <span>Machine Learning (ML)</span>
+          <span>Supervised Learning</span>
+          <span>Deep Learning</span>
+          <span>Reinforcement Learning AI</span>
+          <span>Rule-Based AI</span>
+          
         </div>
       </div>
 
