--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
           <span>IDA Professional</span>
           <span>Oxygen Detective Forensic</span>
           <span>Magnet AXIOM -- Process & Examine</span>
+          <span>TFT unlock tool</span>
           <span>Autopsy</span>
           <span>FTK Imager</span>
           <span>ZAP</span>
