--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
       </div>
 
-      <!-- Forensic & OSINT -->
+      <!-- Forensic -->
       <div class="skill-category">
         <h3>Forensic & OSINT</h3>
         <div class="skill-list">
@@ -196,6 +196,7 @@
         <h3>Artificial Intelligence & Machine Learning</h3>
         <div class="skill-list">
           <span>AI Prompting</span>
+          <span>Generative AI</span>
           <span>Machine Learning (ML)</span>
           <span>Supervised Learning</span>
           <span>Deep Learning</span>
