--- a/index.html
+++ b/index.html
@@ -172,8 +172,9 @@
           <span>Cellebrite Physical Analyzer</span>
           <span>IDA Professional</span>
           <span>Oxygen Detective Forensic</span>
-          <span>Magnet AXIOM -- Process & Examine</span>
+          <span>Magnet AXIOM</span>
           <span>TFT unlock tool</span>
+          <span>MFT unlook tool</span>
           <span>Autopsy</span>
           <span>FTK Imager</span>
           <span>ZAP</span>
