--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
       <!-- Forensic -->
       <div class="skill-category">
-        <h3>Forensic & OSINT</h3>
+        <h3>Forensic</h3>
         <div class="skill-list">
           <span>Digital Forensic</span>
           <span>Computer Forensic</span>
@@ -153,7 +153,6 @@
       <div class="skill-category">
         <h3>Operating Systems</h3>
         <div class="skill-list">
-          <span>Unix</span>
           <span>GNU/Linux</span>
           <span>Ubuntu</span>
           <span>Kali Linux</span>
