Rename 'Forensic' to 'Digital Forensics'

--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
         </div>
       </div>
 
-      <!-- Forensic -->
+      <!-- Digital Forensics -->
       <div class="skill-category">
-        <h3>Forensic</h3>
+        <h3>Digital Forensics</h3>
         <div class="skill-list">
           <span>Digital Forensic</span>
           <span>Computer Forensic</span>
