--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
           <article class="project-card">
             <img src="assets/CMTL — CyberSec Multi-Tool Launcher.jpg" alt="CMTL">
-            <h3>CMTL — CyberSec Multi-Tool Launcher (2025)</h3>
+            <h3>CMTL — CyberSec Multi-Tool Launcher (2025-present)</h3>
             <p>Cyber Security Multi-Tool Launcher: unified GUI to run scans, assessments and manage tools centrally.</p>
             <p><a href="https://github.com/isayani-78/CMTL" target="_blank" class="github-link">View on GitHub</a></p>
           </article>
