--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <li>Academic Researcher 👩‍💻</li>
           <li>Curious learner 💻</li>
           <li>Exploring security & coding 🔐</li>
-          <li>Ethical Hacker (Pentester) 💻</li>
+          <li>Pentester 💻</li>
         </ul>
       </div>
     </section>
@@ -361,7 +361,7 @@
   </main>
 
   <footer class="site-footer" style="background:#2c3e50; color:white; text-align:center; padding:20px 0;">
-    <p>© <span id="year"></span> Sayani Maity — Built with Dedication.</p>
+    <p>© <span id="year"></span> Sayani Maity </p>
   </footer>
 
   <script>
