--- a/index.html
+++ b/index.html
@@ -1,95 +1,230 @@
-
+<!doctype html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sayani Maity | CEH v13 | Digital Forensics</title>
-<link rel="stylesheet" href="style.css">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>SAYANI MAITY — Digital Forensics & Ethical Hacking</title>
+<meta name="description" content="Portfolio & resume of SAYANI MAITY — Digital Forensics student."/>
+<link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
+<canvas id="matrix"></canvas>
 
-<header class="nav">
-  <div class="logo">Sayani<span>Maity</span></div>
-  <nav>
+<header class="site-header">
+  <div class="brand">SAYANI <span>MAITY</span></div>
+  <nav class="top-nav" id="top-nav">
+    <a href="#home" class="active">Home</a>
     <a href="#about">About</a>
     <a href="#skills">Skills</a>
     <a href="#projects">Projects</a>
-    <a href="#certs">Certifications</a>
+    <a href="#Certificates">Certificates</a>
+    <a href="#research">Research Focus</a>
     <a href="#contact">Contact</a>
+    <a href="Sayani_Maity_Resume.pdf" class="resume-btn" download>Download Resume</a>
   </nav>
+  <div class="hamburger" id="hamburger" aria-label="Toggle navigation">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
 </header>
 
-<section class="hero">
-  <div class="hero-left">
-    <h1>Certified Ethical Hacker <span>v13</span></h1>
-    <p>Digital Forensics • VAPT • OSINT • Cyber Research</p>
-    <div class="hero-badges">
-      <span>CEH v13</span>
-      <span>ISOEH</span>
-      <span>MAKAUT</span>
+<main class="container">
+
+  <!-- RIGHT-SIDEBAR -->
+  <aside class="right-panel" id="right-panel">
+    <div class="profile-card">
+      <div class="photo-wrap">
+        <img src="assets/profile.jpg" alt="Sayani profile">
+      </div>
+      <div class="info">
+        <p class="role">Digital Forensics Student • Pentester</p>
+        <div class="social-bar">
+          <a href="https://github.com/isayani-78" target="_blank">GitHub</a>
+          <a href="https://www.linkedin.com/in/sayanimaity/" target="_blank">LinkedIn</a>
+          <a href="mailto:sayanimaity2024@gmail.com">Email</a>
+          <a href="https://discord.com/invite/isayani_78" target="_blank">Discord</a>
+          <a href="https://auth.geeksforgeeks.org/user/isayani_05" target="_blank">GfG</a>
+          <a href="https://x.com/isayani78" target="_blank">X</a>
+          <a href="https://medium.com/@isayani-78" target="_blank">Medium</a>
+          <a href="https://www.facebook.com/isayani78" target="_blank">Facebook</a>
+        </div>
+      </div>
     </div>
-  </div>
-  <img src="assets/profile.jpg" class="hero-img">
-</section>
 
-<section id="about" class="section">
-<h2>About</h2>
-<div class="about-grid">
-  <div class="about-text">
-    <p>I am <b>Sayani Maity</b>, a CEH v13 certified cybersecurity professional and B.Sc. Digital Forensics student at the Indian School of Ethical Hacking (ISOEH), under MAKAUT. My work focuses on ethical hacking, digital investigations, OSINT, and security research.</p>
-    <p>I actively participate in CTFs, hands‑on labs, and research projects involving phishing detection, forensic artefact analysis, and AI‑assisted security automation. I aim to bridge academic research with real‑world cybersecurity challenges.</p>
-  </div>
-  <div class="about-image">
-    <!-- Placeholder for your second picture -->
-    <div class="image-placeholder">Upload Image Here</div>
-  </div>
-</div>
-</section>
+    <div class="slideshow" id="slideshow">
+      <div class="slide active">
+        <img src="assets/CMTL — CyberSec Multi-Tool Launcher.jpg" alt="CMTL">
+        <div class="cap">CMTL — CyberSec Multi-Tool Launcher</div>
+      </div>
+      <div class="slide">
+        <img src="assets/AI- powered Phishing Email Detector (In Development).jpg" alt="Phishing Detector">
+        <div class="cap">AI-Powered Phishing Email Detector</div>
+      </div>
+      <div class="slide">
+        <img src="assets/Forensic Case Study.jpg" alt="Forensic Case Study">
+        <div class="cap">Forensic Case Study</div>
+      </div>
+    </div>
+  </aside>
 
-<section id="skills" class="section">
-<h2>Skills & Tools</h2>
-<div class="skill-grid">
-<div><h4>Pentesting</h4><p>Nmap, Burp, Nessus, OpenVAS, Nikto</p></div>
-<div><h4>Forensics</h4><p>Autopsy, FTK, Magnet AXIOM, Cellebrite</p></div>
-<div><h4>Languages</h4><p>Python, Bash, Shell, HTML</p></div>
-<div><h4>OS</h4><p>Kali, Parrot, Ubuntu, Windows</p></div>
-<div><h4>AI & Research</h4><p>ML, NLP, Phishing Detection</p></div>
-</div>
-</section>
+  <!-- HOME -->
+  <section id="home" class="page hero-section">
+    <div class="hero-center">
+      <img src="assets/profile.jpg" alt="Sayani profile" class="hero-photo"/>
+      <h1 class="hero-name">SAYANI MAITY</h1>
+      <ul class="hero-sub">
+        <li>B.Sc. Digital Forensic Student 🔍</li>
+        <li>Academic Researcher 👩‍💻</li>
+        <li>Curious Learner 💻</li>
+        <li>Exploring Security & Coding 🔐</li>
+        <li>Pentester 💻</li>
+      </ul>
+    </div>
+  </section>
 
-<section id="projects" class="section">
-<h2>Projects</h2>
-<div id="projects-container" class="card-grid"></div>
-</section>
+  <!-- ABOUT -->
+  <section id="about" class="page">
+    <div class="content" style="display:flex; flex-wrap:wrap; gap:20px; align-items:flex-start;">
+      <div style="flex:1; min-width:280px;">
+        <h2>About Me</h2>
+        <p>I am <strong>SAYANI MAITY</strong>, currently pursuing <strong>B.Sc. in Digital Forensics (2023-2026)</strong> at the <strong>ISOEH, Kolkata</strong> under <strong>MAKAUT</strong>. I specialize in Digital Forensics, Penetration Testing, OSINT, and cybersecurity tooling.</p>
+        <p>Fully <strong>CEH trained</strong> and completing the <strong>CHFI syllabus</strong>. Actively participating in <strong>CTFs, research, and AI-assisted detection projects</strong> focused on automation and threat analysis.</p>
+        <p>Technical skills include <strong>Python, Bash, Shell Scripting, VAPT, WAPT, Nmap, Burp Suite, Autopsy, OSINT</strong>.</p>
+        <p>Top 6% in TryHackMe <img src="assets/Sayani thm badge id.png" alt="THM Badge" width="80" style="vertical-align:middle; border-radius:6px;"></p>
+        <h3>🎓 Education</h3>
+        <ul>
+          <li>📘 ICSE, ISC (Pure Science): St. Thomas' High School, Howrah</li>
+          <li>💻 B.Sc. Digital Forensics: ISOEH, Kolkata under MAKAUT (2023–2026)</li>
+        </ul>
+        <h3>🎯 Goal</h3>
+        <p>To develop practical expertise in Cybersecurity, Digital Investigations, and Ethical Hacking. Aspiring to bridge theoretical knowledge with real-world application.</p>
+      </div>
+      <div style="flex:1; min-width:280px;">
+        <!-- Placeholder for second picture -->
+        <div style="width:100%; border:2px dashed var(--accent2); border-radius:12px; height:320px; display:flex; align-items:center; justify-content:center; color:var(--accent2); font-weight:bold; font-size:16px;">
+          Your Second Picture Here
+        </div>
+      </div>
+    </div>
+  </section>
 
-<section id="certs" class="section">
-<h2>Certifications</h2>
-<div class="ceh-card">
-  <img src="assets/ceh-poster.png">
-  <div>
-    <h3>Certified Ethical Hacker (CEH v13)</h3>
-    <p>EC‑Council • Active Credential</p>
-  </div>
-</div>
-<h3 class="sub">Other Certifications & Participation</h3>
-<div id="cert-container" class="card-grid"></div>
-</section>
+  <!-- SKILLS -->
+  <section id="skills" class="page">
+    <div class="content">
+      <h2 style="text-align:center; color: var(--accent2); margin-bottom: 30px;">Skills</h2>
+      <div class="skills-container">
+        <!-- Individual skill categories -->
+        <div class="skill-category">
+          <h3>Languages & Scripting</h3>
+          <div class="skill-list">
+            <span>Python</span><span>Matplotlib</span><span>Bash</span><span>Shell Scripting</span><span>HTML</span><span>NumPy</span>
+          </div>
+        </div>
+        <div class="skill-category">
+          <h3>Security & Pentesting</h3>
+          <div class="skill-list">
+            <span>VAPT</span><span>WAPT</span><span>Threat Management</span><span>Burp</span><span>Nmap</span><span>Internet Security</span><span>Network Security</span>
+          </div>
+        </div>
+        <div class="skill-category">
+          <h3>Digital Forensics</h3>
+          <div class="skill-list">
+            <span>Digital Forensic</span><span>Computer Forensic</span><span>Mobile Forensic</span><span>Network Forensic</span><span>Social Engineering</span><span>Information Gathering</span>
+          </div>
+        </div>
+        <div class="skill-category">
+          <h3>Operating Systems</h3>
+          <div class="skill-list">
+            <span>GNU/Linux</span><span>Ubuntu</span><span>Kali Linux</span><span>Black Arch</span><span>Parrot</span><span>Windows</span>
+          </div>
+        </div>
+        <div class="skill-category">
+          <h3>Tools</h3>
+          <div class="skill-list">
+            <span>Nmap</span><span>Autopsy</span><span>SPF</span><span>Magnet AXIOM</span><span>FTK Imager</span><span>ZAP</span><span>Wireshark</span><span>OpenVAS</span><span>Nessus</span>
+          </div>
+        </div>
+        <div class="skill-category">
+          <h3>AI & ML</h3>
+          <div class="skill-list">
+            <span>AI Prompting</span><span>Machine Learning (ML)</span>
+          </div>
+        </div>
+        <div class="skill-category">
+          <h3>Data Protection & Info Hiding</h3>
+          <div class="skill-list">
+            <span>Cryptography</span><span>Steganography</span><span>Steganalysis</span><span>Obfuscation</span><span>Encoding</span><span>Decoding</span><span>Quantum Cryptography</span><span>FPE</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-<section id="contact" class="section">
-<h2>Contact</h2>
-<p>Email: <a href="mailto:sayanimaity78@gmail.com">sayanimaity78@gmail.com</a></p>
-<p class="socials">
-<a href="https://github.com/isayani-78">GitHub</a>
-<a href="https://www.linkedin.com/in/sayanimaity/">LinkedIn</a>
-<a href="https://x.com/isayani78">X</a>
-<a href="https://medium.com/@isayani-78">Medium</a>
-</p>
-</section>
+  <!-- PROJECTS -->
+  <section id="projects" class="page">
+    <div class="content">
+      <h2>Projects</h2>
+      <div class="projects-grid">
+        <!-- Example project card -->
+        <article class="project-card">
+          <img src="assets/Basic-Strong-Password-Generator.jpg" alt="Basic Strong Password Generator">
+          <h3>Basic Strong Password Generator (2025)</h3>
+          <p>Python script to generate strong passwords with letters, digits, and special chars.</p>
+          <p><a href="https://github.com/isayani-78/-Basic-Strong-Password-Generator" target="_blank" class="github-link">View on GitHub</a></p>
+        </article>
+        <!-- Add other projects similarly -->
+      </div>
+    </div>
+  </section>
 
-<footer>© 2026 Sayani Maity</footer>
+  <!-- CERTIFICATES -->
+  <section id="Certificates" class="page">
+    <div class="content">
+      <h2>Certificates</h2>
+      <div class="certificates-grid">
+        <!-- Example certificate card -->
+        <div class="certificate-card">
+          <img src="assets/Completion of Core Python Course.jpg" alt="Core Python Course">
+          <h3>Completion of Core Python Course</h3>
+        </div>
+        <!-- Add other certificates similarly -->
+      </div>
+    </div>
+  </section>
+
+  <!-- RESEARCH -->
+  <section id="research" class="page">
+    <div class="content">
+      <h2>Research Focus</h2>
+      <p>Focus on forensic artifact analysis, security automation, AI-driven threat detection, phishing detection, privacy-preserving forensics, and open-source forensic tools.</p>
+      <p>Goal: Contribute to Cybersecurity and Digital Forensics field by enhancing investigative efficiency and safer digital environments.</p>
+    </div>
+  </section>
+
+  <!-- CONTACT -->
+  <section id="contact" class="page">
+    <div class="content">
+      <h2>Contact Me</h2>
+      <p>Email: <a href="mailto:sayanimaity78@gmail.com">sayanimaity78@gmail.com</a></p>
+      <p>Let’s connect for cybersecurity discussions, research ideas, or projects.</p>
+      <div style="display:flex; gap:8px; flex-wrap:wrap;">
+        <a href="https://github.com/isayani-78" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/in/sayanimaity/" target="_blank">LinkedIn</a>
+        <a href="https://x.com/isayani78" target="_blank">X</a>
+      </div>
+    </div>
+  </section>
+
+</main>
+
+<footer class="site-footer">
+  <p>© <span id="year"></span> Sayani Maity</p>
+</footer>
+
+<script>
+  document.getElementById('year').textContent = new Date().getFullYear();
+</script>
 <script src="script.js"></script>
 </body>
 </html>
-```
-
