--- a/index.html
+++ b/index.html
@@ -1,1 +1,88 @@
-Launching soon 
+<section class="section section-dark section-about" id="about">
+    <div class="container">
+        <div class="section-head">
+            <span>About Me</span>
+            <h2>Digital Forensics Enthusiast & Ethical Hacker</h2>
+        </div>
+        <div class="row mt-4">
+            <div class="col-lg-6">
+                <div class="about-desc">
+                    <p>I am Sayani Maity, a Digital Forensics student with a passion for Cybersecurity and Penetration Testing[cite: 70, 71]. With hands-on experience in forensic tools and Python, I am dedicated to tackling real-world security challenges[cite: 76, 77].</p>
+                    <p>Recently, I achieved my <strong>CEHv13ai Certification</strong>, further enhancing my expertise in AI-driven ethical hacking.</p>
+                </div>
+            </div>
+            
+            <div class="col-12 mt-5 text-center">
+                <div class="certificate-poster b-box p-3">
+                    <h4>Certified Ethical Hacker (CEHv13ai)</h4>
+                    <div class="image-placeholder mt-3" style="border: 2px dashed #666; min-height: 400px; display: flex; align-items: center; justify-content: center; background: #2a2d35;">
+                        <span class="text-muted">Place your CEH Certificate Image Here (e.g., <img src="ceh_v13_cert.jpg" class="img-fluid">)</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="section section-dark section-resume" id="resume">
+    <div class="container">
+        <div class="section-head">
+            <span>My Resume</span>
+            <h2>Education & Experience</h2>
+        </div>
+        <div class="row mt-4">
+            <div class="col-sm-6 col-lg-6">
+                <h5 class="section-subHead mt-3">Education</h5>
+                <div class="resume-list b-box p-4 mt-4">
+                    <h5>B.Sc. Digital Forensics</h5>
+                    <h6 class="badge badge-dark d-inline-block my-3">ISOEH | MAKAUT | 2023 - 2026</h6>
+                    <p>Studying Digital Forensics and Penetration Testing[cite: 62, 64, 80].</p>
+                </div>
+                <div class="resume-list b-box p-4 mt-4">
+                    <h5>Secondary Education</h5>
+                    <h6 class="badge badge-dark d-inline-block my-3">St. Thomas High School | 2015 - 2023</h6>
+                    <p>Completed schooling with a focus on core academic excellence[cite: 65, 66].</p>
+                </div>
+            </div>
+
+            <div class="col-sm-6 col-lg-6">
+                <h5 class="section-subHead mt-3">Technical Skills</h5>
+                <div class="skills-list mt-4">
+                    <h6>Forensics: Magnet Axiom, Autopsy, FTK Imager [cite: 82]</h6>
+                    <h6>Security: Nmap, Burp Suite, Wireshark, Metasploit [cite: 83]</h6>
+                    <h6>Programming: Python, Bash, Shell Scripting [cite: 84]</h6>
+                    <h6>Security Areas: VAPT, WAPT, Network Security, Cryptography [cite: 85]</h6>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="section section-dark" id="projects">
+    <div class="container">
+        <div class="section-head">
+            <span>Portfolio</span>
+            <h2>Cybersecurity Projects</h2>
+        </div>
+        <div class="row mt-4">
+            <div class="col-md-4 mb-4">
+                <div class="blog-list b-box p-3">
+                    <h5>AI-Powered Phishing Detector</h5>
+                    <p>Detects phishing emails using AI analysis of headers and malicious patterns[cite: 105, 109, 110].</p>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="blog-list b-box p-3">
+                    <h5>Cyber Multi Tool Launcher</h5>
+                    <p>GUI platform for VAPT, Network Scanning, and Digital Forensics management[cite: 100, 101, 104].</p>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="blog-list b-box p-3">
+                    <h5>Caesar Cipher Tool</h5>
+                    <p>Includes auto-decryption and brute-force cracking for hands-on security practice[cite: 97, 99].</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
