--- a/index.html
+++ b/index.html
@@ -1,88 +1,128 @@
-<section class="section section-dark section-about" id="about">
-    <div class="container">
-        <div class="section-head">
-            <span>About Me</span>
-            <h2>Digital Forensics Enthusiast & Ethical Hacker</h2>
-        </div>
-        <div class="row mt-4">
-            <div class="col-lg-6">
-                <div class="about-desc">
-                    <p>I am Sayani Maity, a Digital Forensics student with a passion for Cybersecurity and Penetration Testing[cite: 70, 71]. With hands-on experience in forensic tools and Python, I am dedicated to tackling real-world security challenges[cite: 76, 77].</p>
-                    <p>Recently, I achieved my <strong>CEHv13ai Certification</strong>, further enhancing my expertise in AI-driven ethical hacking.</p>
-                </div>
-            </div>
-            
-            <div class="col-12 mt-5 text-center">
-                <div class="certificate-poster b-box p-3">
-                    <h4>Certified Ethical Hacker (CEHv13ai)</h4>
-                    <div class="image-placeholder mt-3" style="border: 2px dashed #666; min-height: 400px; display: flex; align-items: center; justify-content: center; background: #2a2d35;">
-                        <span class="text-muted">Place your CEH Certificate Image Here (e.g., <img src="ceh_v13_cert.jpg" class="img-fluid">)</span>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sayani Maity | Digital Forensics & Ethical Hacker</title>
+    <link rel="stylesheet" href="./assets/vendor.css">
+    <link rel="stylesheet" href="./assets/custom.css">
+</head>
+
+<body class="section-dark">
+
+    <section class="section section-home" id="home" style="background-image: url('your-bg-image.jpg');">
+        <div class="container">
+            <div class="row full-screen align-items-center">
+                <div class="col-lg-12 text-center">
+                    <div class="home-content">
+                        <h5 class="text-uppercase mb-3">Welcome to my Portfolio</h5>
+                        <h1 class="display-3 fw-bold">I'm Sayani Maity</h1>
+                        <p class="lead">B.Sc. Digital Forensics Student | Penetration Testing Enthusiast [cite: 11]</p>
+                        <div class="mt-4">
+                            <a href="#contact" class="btn btn-primary">Contact Me</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<section class="section section-dark section-resume" id="resume">
-    <div class="container">
-        <div class="section-head">
-            <span>My Resume</span>
-            <h2>Education & Experience</h2>
-        </div>
-        <div class="row mt-4">
-            <div class="col-sm-6 col-lg-6">
-                <h5 class="section-subHead mt-3">Education</h5>
-                <div class="resume-list b-box p-4 mt-4">
-                    <h5>B.Sc. Digital Forensics</h5>
-                    <h6 class="badge badge-dark d-inline-block my-3">ISOEH | MAKAUT | 2023 - 2026</h6>
-                    <p>Studying Digital Forensics and Penetration Testing[cite: 62, 64, 80].</p>
+    <section class="section section-about" id="about">
+        <div class="container">
+            <div class="section-head text-center">
+                <span>About Me</span>
+                <h2>Professional Profile</h2>
+            </div>
+            <div class="row mt-5 justify-content-center">
+                <div class="col-lg-8 text-center">
+                    <p class="about-text">
+                        Digital Forensics enthusiast with a passion for Ethical Hacking[cite: 13]. 
+                        Currently pursuing my B.Sc. in Digital Forensics at ISOEH under MAKAUT[cite: 33, 34]. 
+                        I specialize in VAPT, WAPT, and Mobile Forensics with a strong foundation in Python[cite: 13, 39].
+                    </p>
                 </div>
-                <div class="resume-list b-box p-4 mt-4">
-                    <h5>Secondary Education</h5>
-                    <h6 class="badge badge-dark d-inline-block my-3">St. Thomas High School | 2015 - 2023</h6>
-                    <p>Completed schooling with a focus on core academic excellence[cite: 65, 66].</p>
+                
+                <div class="col-lg-10 mt-5">
+                    <div class="cert-poster-box p-4 text-center" style="border: 2px solid #333; background: #1a1a1a; border-radius: 15px;">
+                        <h3 class="mb-4 text-primary">Certified Ethical Hacker (CEHv13ai)</h3>
+                        <img src="path_to_your_ceh_certificate.jpg" alt="CEHv13ai Certificate" class="img-fluid" style="max-height: 600px; box-shadow: 0 0 20px rgba(0,0,0,0.5);">
+                        <p class="mt-3 text-muted italic">Official Certification of Ethical Hacking Excellence</p>
+                    </div>
                 </div>
             </div>
+        </div>
+    </section>
 
-            <div class="col-sm-6 col-lg-6">
-                <h5 class="section-subHead mt-3">Technical Skills</h5>
-                <div class="skills-list mt-4">
-                    <h6>Forensics: Magnet Axiom, Autopsy, FTK Imager [cite: 82]</h6>
-                    <h6>Security: Nmap, Burp Suite, Wireshark, Metasploit [cite: 83]</h6>
-                    <h6>Programming: Python, Bash, Shell Scripting [cite: 84]</h6>
-                    <h6>Security Areas: VAPT, WAPT, Network Security, Cryptography [cite: 85]</h6>
+    <section class="section section-skills" id="skills">
+        <div class="container">
+            <div class="section-head">
+                <span>Expertise</span>
+                <h2>Technical Skills</h2>
+            </div>
+            <div class="row mt-4">
+                <div class="col-md-4">
+                    <div class="skill-card b-box p-4">
+                        <h4>Forensics Tools</h4>
+                        <ul class="list-unstyled">
+                            <li>Magnet Axiom [cite: 36]</li>
+                            <li>Autopsy [cite: 36]</li>
+                            <li>FTK Imager [cite: 36]</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="skill-card b-box p-4">
+                        <h4>Cybersecurity</h4>
+                        <ul class="list-unstyled">
+                            <li>Nmap & Wireshark [cite: 37]</li>
+                            <li>Burp Suite [cite: 37]</li>
+                            <li>Nessus & Nikto [cite: 37]</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="skill-card b-box p-4">
+                        <h4>Operating Systems</h4>
+                        <ul class="list-unstyled">
+                            <li>Kali Linux [cite: 40]</li>
+                            <li>Parrot OS [cite: 40]</li>
+                            <li>Black Arch [cite: 40]</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<section class="section section-dark" id="projects">
-    <div class="container">
-        <div class="section-head">
-            <span>Portfolio</span>
-            <h2>Cybersecurity Projects</h2>
-        </div>
-        <div class="row mt-4">
-            <div class="col-md-4 mb-4">
-                <div class="blog-list b-box p-3">
-                    <h5>AI-Powered Phishing Detector</h5>
-                    <p>Detects phishing emails using AI analysis of headers and malicious patterns[cite: 105, 109, 110].</p>
-                </div>
+    <section class="section" id="projects">
+        <div class="container">
+            <div class="section-head">
+                <span>Work</span>
+                <h2>Featured Projects</h2>
             </div>
-            <div class="col-md-4 mb-4">
-                <div class="blog-list b-box p-3">
-                    <h5>Cyber Multi Tool Launcher</h5>
-                    <p>GUI platform for VAPT, Network Scanning, and Digital Forensics management[cite: 100, 101, 104].</p>
+            <div class="row mt-4">
+                <div class="col-md-6 mb-4">
+                    <div class="project-box b-box p-4">
+                        <h4>AI-Powered Phishing Email Detector</h4>
+                        <p>Analyzes headers and content for malicious patterns using AI-based analysis[cite: 63, 64].</p>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="blog-list b-box p-3">
-                    <h5>Caesar Cipher Tool</h5>
-                    <p>Includes auto-decryption and brute-force cracking for hands-on security practice[cite: 97, 99].</p>
+                <div class="col-md-6 mb-4">
+                    <div class="project-box b-box p-4">
+                        <h4>Cyber Security Multi Tool Launcher</h4>
+                        <p>A GUI platform designed to manage multiple tools for VAPT and Digital Forensics[cite: 54, 55].</p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+
+    <footer class="footer p-5 text-center">
+        <div class="container">
+            <p>Connect with me: <a href="mailto:sayanimaity78@gmail.com">sayanimaity78@gmail.com</a> [cite: 27]</p>
+            <p>Howrah, West Bengal, India [cite: 26]</p>
+        </div>
+    </footer>
+
+</body>
+</html>
