--- a/index.html
+++ b/index.html
@@ -4,125 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sayani Maity | Digital Forensics & Ethical Hacker</title>
-    <link rel="stylesheet" href="./assets/vendor.css">
-    <link rel="stylesheet" href="./assets/custom.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
+<body class="dark-theme">
 
-<body class="section-dark">
-
-    <section class="section section-home" id="home" style="background-image: url('your-bg-image.jpg');">
+    <section id="home" class="hero-section">
         <div class="container">
-            <div class="row full-screen align-items-center">
-                <div class="col-lg-12 text-center">
-                    <div class="home-content">
-                        <h5 class="text-uppercase mb-3">Welcome to my Portfolio</h5>
-                        <h1 class="display-3 fw-bold">I'm Sayani Maity</h1>
-                        <p class="lead">B.Sc. Digital Forensics Student | Penetration Testing Enthusiast [cite: 11]</p>
-                        <div class="mt-4">
-                            <a href="#contact" class="btn btn-primary">Contact Me</a>
-                        </div>
-                    </div>
+            <div class="hero-content">
+                <h1>Hello, I am <span>Sayani Maity</span></h1>
+                <p>Digital Forensics Student || Penetration Testing Enthusiast [cite: 11]</p>
+                <div class="social-links">
+                    <a href="https://www.linkedin.com/in/sayanimaity"><i class="fab fa-linkedin"></i></a>
+                    <a href="mailto:sayanimaity78@gmail.com"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="section section-about" id="about">
+    <section id="about" class="section">
         <div class="container">
-            <div class="section-head text-center">
-                <span>About Me</span>
-                <h2>Professional Profile</h2>
-            </div>
-            <div class="row mt-5 justify-content-center">
-                <div class="col-lg-8 text-center">
-                    <p class="about-text">
-                        Digital Forensics enthusiast with a passion for Ethical Hacking[cite: 13]. 
-                        Currently pursuing my B.Sc. in Digital Forensics at ISOEH under MAKAUT[cite: 33, 34]. 
-                        I specialize in VAPT, WAPT, and Mobile Forensics with a strong foundation in Python[cite: 13, 39].
-                    </p>
+            <h2 class="section-title">About Me</h2>
+            <div class="about-grid">
+                <div class="about-text">
+                    <p>I am a Digital Forensics enthusiast pursuing my B.Sc. at the Indian School of Ethical Hacking (ISOEH) under MAKAUT[cite: 13, 17, 33]. I specialize in Python, VAPT, WAPT, and Mobile Forensics[cite: 13, 39].</p>
                 </div>
                 
-                <div class="col-lg-10 mt-5">
-                    <div class="cert-poster-box p-4 text-center" style="border: 2px solid #333; background: #1a1a1a; border-radius: 15px;">
-                        <h3 class="mb-4 text-primary">Certified Ethical Hacker (CEHv13ai)</h3>
-                        <img src="path_to_your_ceh_certificate.jpg" alt="CEHv13ai Certificate" class="img-fluid" style="max-height: 600px; box-shadow: 0 0 20px rgba(0,0,0,0.5);">
-                        <p class="mt-3 text-muted italic">Official Certification of Ethical Hacking Excellence</p>
+                <div class="cert-poster">
+                    <h3>Official CEHv13ai Certified</h3>
+                    <div class="poster-frame">
+                        <img src="ceh-certificate.jpg" alt="CEHv13ai Certificate">
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="section section-skills" id="skills">
+    <section id="skills" class="section bg-alt">
         <div class="container">
-            <div class="section-head">
-                <span>Expertise</span>
-                <h2>Technical Skills</h2>
-            </div>
-            <div class="row mt-4">
-                <div class="col-md-4">
-                    <div class="skill-card b-box p-4">
-                        <h4>Forensics Tools</h4>
-                        <ul class="list-unstyled">
-                            <li>Magnet Axiom [cite: 36]</li>
-                            <li>Autopsy [cite: 36]</li>
-                            <li>FTK Imager [cite: 36]</li>
-                        </ul>
-                    </div>
+            <h2 class="section-title">Technical Expertise</h2>
+            <div class="skills-container">
+                <div class="skill-category">
+                    <h4>Forensics</h4>
+                    <ul>
+                        <li>Magnet Axiom [cite: 36]</li>
+                        <li>Autopsy [cite: 36]</li>
+                        <li>FTK Imager [cite: 36]</li>
+                    </ul>
                 </div>
-                <div class="col-md-4">
-                    <div class="skill-card b-box p-4">
-                        <h4>Cybersecurity</h4>
-                        <ul class="list-unstyled">
-                            <li>Nmap & Wireshark [cite: 37]</li>
-                            <li>Burp Suite [cite: 37]</li>
-                            <li>Nessus & Nikto [cite: 37]</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="skill-card b-box p-4">
-                        <h4>Operating Systems</h4>
-                        <ul class="list-unstyled">
-                            <li>Kali Linux [cite: 40]</li>
-                            <li>Parrot OS [cite: 40]</li>
-                            <li>Black Arch [cite: 40]</li>
-                        </ul>
-                    </div>
+                <div class="skill-category">
+                    <h4>Cybersecurity</h4>
+                    <ul>
+                        <li>Nmap & Wireshark [cite: 37]</li>
+                        <li>Burp Suite [cite: 37]</li>
+                        <li>VAPT/WAPT [cite: 39]</li>
+                    </ul>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="section" id="projects">
-        <div class="container">
-            <div class="section-head">
-                <span>Work</span>
-                <h2>Featured Projects</h2>
-            </div>
-            <div class="row mt-4">
-                <div class="col-md-6 mb-4">
-                    <div class="project-box b-box p-4">
-                        <h4>AI-Powered Phishing Email Detector</h4>
-                        <p>Analyzes headers and content for malicious patterns using AI-based analysis[cite: 63, 64].</p>
-                    </div>
-                </div>
-                <div class="col-md-6 mb-4">
-                    <div class="project-box b-box p-4">
-                        <h4>Cyber Security Multi Tool Launcher</h4>
-                        <p>A GUI platform designed to manage multiple tools for VAPT and Digital Forensics[cite: 54, 55].</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <footer class="footer p-5 text-center">
-        <div class="container">
-            <p>Connect with me: <a href="mailto:sayanimaity78@gmail.com">sayanimaity78@gmail.com</a> [cite: 27]</p>
-            <p>Howrah, West Bengal, India [cite: 26]</p>
-        </div>
-    </footer>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.ripples/0.5.3/jquery.ripples.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
