--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
 
                 <div class="project-card-front">
                     <img src="project2.png" alt="Cyber Security Multi-Tool" style="width:70px; height:70px; object-fit:contain; margin-bottom:10px;">
-                    <h3 style="color:#fff; font-weight:bold; font-size:16px; margin-bottom:6px;">Cyber Security Multi-Tool</h3>
+                    <h3 style="color:#fff; font-weight:bold; font-size:16px; margin-bottom:6px;">Cyber Security Multi-Tool Launcher (CMTL)</h3>
                     <p style="font-size:13px; line-height:1.4; opacity:0.85; margin-bottom:10px;">
                         GUI platform for VAPT, Pen Testing, and Network Scanning.
                     </p>
@@ -562,7 +562,7 @@
 
                 <div class="project-card-back">
                     <span class="project-date">Aug 2025 - Present</span>
-                    <h3 class="project-title">Cyber Security Multi-Tool</h3>
+                    <h3 class="project-title">Cyber Security Multi-Tool Launcher</h3>
                     <p class="project-desc">GUI platform for VAPT, Pen Testing, and Network Scanning. A one-click interface to streamline tasks for efficiency. (Academic Project)</p>
                     <div class="project-tech">GUI // VAPT // AUTOMATION</div>
                 </div>
@@ -576,7 +576,7 @@
 
                 <div class="project-card-front">
                     <img src="project3.png" alt="AI Phishing Detector" style="width:70px; height:70px; object-fit:contain; margin-bottom:10px;">
-                    <h3 style="color:#fff; font-weight:bold; font-size:16px; margin-bottom:6px;">AI Phishing Detector</h3>
+                    <h3 style="color:#fff; font-weight:bold; font-size:16px; margin-bottom:6px;">AI-Powered Phishing Email Detector</h3>
                     <p style="font-size:13px; line-height:1.4; opacity:0.85; margin-bottom:10px;">
                         Detects phishing emails using AI analysis of headers and content.
                     </p>
@@ -590,7 +590,7 @@
 
                 <div class="project-card-back">
                     <span class="project-date">June 2025 - Present</span>
-                    <h3 class="project-title">AI Phishing Detector</h3>
+                    <h3 class="project-title">AI-Powered Phishing Email Detector</h3>
                     <p class="project-desc">Detects phishing emails using AI-based analysis of headers and content to identify malicious patterns.</p>
                     <div class="project-tech">AI // EMAIL SEC // THREAT INTEL</div>
                 </div>
@@ -1028,3 +1028,4 @@
 </body>
 
 </html>
+
